tests/baselines/reference/classImplementsClass6.errors.txt
==== tests/cases/compiler/classImplementsClass6.ts (2 errors) ====
    class A {
        static bar(): string {
            return "";
        }
        foo(): number { return 1; }
    }
    class C implements A {
        
        foo() {
            return 1;
        }
    }
    
    class C2 extends A {}
    
    var c: C;
    var c2: C2;
    c = c2;
    c2 = c;
    c.bar(); // error
      ~~~
!!! classImplementsClass6.ts(20,3): error TS2094: The property 'bar' does not exist on value of type 'C'.
    c2.bar(); // should error
       ~~~
!!! classImplementsClass6.ts(21,4): error TS2094: The property 'bar' does not exist on value of type 'C2'.